syntax = "proto3";

message News {
    string id = 1;
    string title = 2;
    string body = 3;
    string postImage = 4;
}

service NewsService {
    rpc GetAllNews (Empty) returns (NewsList);
    rpc getNews (NewsId) returns (News);
    rpc deleteNews (NewsId) returns (Empty);
    rpc editNews (News) returns (News);
    rpc addNews (News) returns (News);
}

message Empty{}

message NewsId {
    string id = 1;
}

message NewsList{
    repeated News news = 1;
}
